--- a/lab1/report/report.tex
+++ b/lab1/report/report.tex
@@ -1,7 +1,7 @@
 \documentclass[a4paper,11pt]{article}
 %\documentclass[a4paper,9pt,landscape]{article}
 \usepackage[english,swedish]{babel}
-\usepackage[utf8]{inputenc}
+%\usepackage[utf8]{inputenc}
 \usepackage{graphicx}
 \usepackage{fullpage}
 \usepackage{amsmath}
@@ -70,11 +70,44 @@
 
 \section{Thresholding filter}
 \subsection{Description of the program}
-\subsection{Result and graphs}
+This program turns a coloured image into a black and white image. 
 
+The first step is determining the average pixel intensity by adding the RGB values of each pixel in the image together and dividing by the total number of pixels. The program then remakes the looks at the RGB sum for each pixel in turn and determines if the corresponding pixel of the output image should be black or white by whether it's greater or lower than the average.
+
+Overview of the linear program
+
+\begin{itemize}
+\renewcommand{\labelitemi}{$\bullet$}
+\item Load image from disk
+\item Calculate average RGB sum
+\item Calculate output image
+\item Write image to disk
+\end{itemize}
+
+Because there is no dependency between pixels during either of the two calculations the work can easily be divided between an arbitrary amount of processors by giving them an as equal share as possible. 
+
+The program calculates the work share of each processor and then sends the relevant part of the sourceimage from the processor that loaded the image from disk by the MPI\_Scatter command. 
+
+The processors then calculate the RGB sum of their share and the total sum is then calculated and redistributed for the second calculation by using the MPI\_Allreduce command.
+
+Overview of the parallel program
+
+\begin{itemize}
+\renewcommand{\labelitemi}{$\bullet$}
+\item Load image from disk on root processor
+\item Calculate work shares
+\item Use MPI\_Scatter to distribute parts of the image
+\item Calculate average RGB sum in parallel
+\item Sum the results and redistributed the total sum by using MPI\_Allreduce
+\item Calculate output image in parallel
+\item Gather the result to the root processor by using MPI\_Gather
+\item Root process writes image to disk
+\end{itemize}
+
+\subsection{Result and graphs}
 \begin{table}[h!]
   \label{entropitakt}
-  \caption{Entropitakter beroende på modellordning för testfilerna.}
+  \caption{Entropitakter beroende pmodellordning f testfilerna.}
   \begin{tabular}[h]{|l|l|l|l|l|l|l|l|l|l|}
     \hline
     Modellordning & 0     & 1     & 2     & 3     & 4     & 5     & 6     & 7     & 8\\
