--- a/lab1/report/report.tex
+++ b/lab1/report/report.tex
@@ -160,27 +160,33 @@ The program calculates the work share of each processor and then distributes the
 \end{itemize}
 
 \subsection{Result and graphs}
+In figure \ref{runtime_vs_cores} we can see that the largest image scales well to 4 cores, halving the runtime, but then barely sees any decrease in runtime when increasing the amount of cores to 8 and finally sees a slight increase in runtime for more cores than that. Because the work to be done is small compared to the blur filter but the messaging is similar we expect that this program should scale less well to many cores. It appears that the work load is in fact so small that there's quickly no gain at all. This becomes more pronounced as the problem size grows smaller to the point where the smallest image never sees any gain in increasing the amount of cores past 2.
+
+For a single core we see that increasing the problem size will linearly increase run time. The size of im2 is very slightly more than twice that of im1 and the run time is doubled. Similarily im3 is slightly less than twice the size of im2 but and has the run time doubled again. The size of im4 is about $4.7$ times that of im3 and the run time is very close to $4.7$ times that of im3. If we try the same for 4 cores we see that it holds up between im2, im3 and im4 but not so much going from im1 to im2 where the communication starts taking too much time.
+
+This observation about the graph is also corroborated by table \ref{mpixelspersecond} which shows the number of pixels in the input image divided by run time and is proportional to MFlops. The columns show that keeping the amount of cores constant will give linear increase in run time up to a point where too many cores creates too much overhead, and this point is lower for smaller problems. If we look at the rows we can see that increasing the amount of cores will solve the problem faster up to a point where there's too much overhead.
+
+%redo this paragraph
+For the scaled speed up we see that the run time stays the same for im1 on 1 core as im2 on 4 cores which means that we gain $50\%$ run time per extra core. This holds up as we move to im3 where doubling the problem size and amount of cores results in almost double the run time. For im4 we double the amount of cores again but the problem size is $4.7$ times larger and the run time is now $3.3$ times higher which gives an increase per core of $70\%$.
+
+\begin{figure}[!h]
+  \caption{Run times related to number of cores for the different images.}
+  \label{runtime_vs_cores}
+  \includegraphics[scale=0.9]{../plots/runtimevscoresthres.png}
+\end{figure}
+
+
 \begin{table}[h!]
-  \label{entropitakt}
-  \caption{Entropitakter beroende pmodellordning f testfilerna.}
-  \begin{tabular}[h]{|l|l|l|l|l|l|l|l|l|l|}
+  \label{mpixelspersecond}
+  \caption{$MPixels/Second$ when running with different amount of threads and on different data.}
+  \begin{tabular}[h]{|l|l|l|l|l|l|}
     \hline
-    Modellordning & 0     & 1     & 2     & 3     & 4     & 5     & 6     & 7     & 8\\
+                  & 1     & 2     & 4     & 8     & 16\\
     \hline
-    alice29.txt   & 4.568 & 3.419 & 2.485 & 1.777 & 1.324 & 0.978 & 0.724 & 0.522 & 0.371 \\ 
-    asyoulik.txt  & 4.808 & 3.418 & 2.538 & 1.896 & 1.380 & 0.966 & 0.661 & 0.425 & 0.265 \\ 
-    cp.html       & 5.229 & 3.467 & 1.738 & 0.774 & 0.443 & 0.328 & 0.266 & 0.229 & 0.197 \\ 
-    fields.c      & 5.007 & 2.950 & 1.470 & 0.867 & 0.624 & 0.499 & 0.374 & 0.265 & 0.203 \\ 
-    grammar.lsp   & 4.630 & 2.805 & 1.286 & 0.670 & 0.448 & 0.370 & 0.302 & 0.246 & 0.174 \\ 
-    kennedy.xls   & 3.573 & 2.777 & 1.712 & 1.577 & 1.442 & 1.354 & 1.261 & 1.123 & 1.065 \\ 
-    lcet10.txt    & 4.669 & 3.497 & 2.612 & 1.838 & 1.376 & 1.078 & 0.842 & 0.646 & 0.485 \\ 
-    plrabn12.txt  & 4.531 & 3.366 & 2.717 & 2.138 & 1.729 & 1.377 & 1.047 & 0.742 & 0.487 \\ 
-    ptt5          & 1.210 & 0.824 & 0.705 & 0.530 & 0.397 & 0.316 & 0.283 & 0.265 & 0.248 \\ 
-    sum           & 5.329 & 3.298 & 1.931 & 1.199 & 0.740 & 0.540 & 0.448 & 0.338 & 0.199 \\ 
-    xargs.1       & 4.897 & 3.194 & 1.549 & 0.727 & 0.427 & 0.279 & 0.196 & 0.158 & 0.124 \\ 
-    bible.txt     & 4.343 & 3.269 & 2.479 & 1.911 & 1.576 & 1.369 & 1.201 & 1.045 & 0.890 \\ 
-    E.coli        & 2.000 & 1.981 & 1.963 & 1.951 & 1.943 & 1.936 & 1.930 & 1.920 & 1.889 \\ 
-    world192.txt  & 4.998 & 3.660 & 2.771 & 1.918 & 1.287 & 0.912 & 0.714 & 0.587 & 0.483 \\ 
+    im1           & 135.41 & 183.31 & 184.94 & 68.89  & 21.77\\ 
+    im2           & 150.01 & 209.17 & 274.71 & 201.65 & 63.15\\ 
+    im3           & 146.25 & 209.72 & 274.44 & 275.62 & 138.23\\ 
+    im4           & 145.07 & 212.56 & 286.41 & 332.90 & 297.42\\
     \hline
   \end{tabular}
 \end{table}
